# Qt6UseLibrary

./: .gitignore  README.md
MyQtLib/: CMakeLists.txt  myqtlib.cpp
Test6_7/: CMakeLists.txt  Main.qml  main.cpp  myclass.cpp  myclass.h
Test6_7/UI/: MainScreen.qml  Navigator.qml  ScreenOne.qml  ScreenTwo.qml  TitleBar.qml
Test6_7/libraries/inc/: MyQtLib_global.h  myqtlib.h
